force-app/main/default/objects/Order_Lines_to_Shipping__c/Order_Lines_to_Shipping__c.object-meta.xml
<CustomObject>
    <label>Order Line Shipping</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Line Orders to Shipping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Lines Shipping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>