force-app/main/default/objects/Order_Lines_to_Shipping__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <formula>TEXT(Shipment__r.Provider)</formula>
    <label>Carrier</label>
    <type>Text</type>
</CustomField>