force-app/main/default/objects/Order_Lines_to_Shipping__c/fields/Delivery_Number_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Number_Created_Date__c</fullName>
    <formula>Shipment__r.HRCSVC_Delivery_Number_Created_Date__c</formula>
    <label>Delivery Number Created Date</label>
    <type>Date</type>
</CustomField>