force-app/main/default/objects/Order_Lines_to_Shipping__c/fields/Delivery_Number_SAP__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Number_SAP__c</fullName>
    <formula>Shipment__r.HRCSVC_Delivery_Number__c</formula>
    <label>Delivery Number</label>
    <type>Text</type>
</CustomField>