force-app/main/default/objects/Order_Lines_to_Shipping__c/fields/Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date__c</fullName>
    <formula>Shipment__r.ExpectedDeliveryDate</formula>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>