force-app/main/default/objects/Order_Lines_to_Shipping__c/fields/Handling_Unit_SAP__c.field-meta.xml
<CustomField>
    <fullName>Handling_Unit_SAP__c</fullName>
    <formula>Shipment__r.HRCSVC_Handling_Unit__c</formula>
    <label>Handling Unit</label>
    <type>Text</type>
</CustomField>