force-app/main/default/objects/Order_Lines_to_Shipping__c/fields/HRCSVC_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order Lines Shipping</relationshipLabel>
    <relationshipName>Order_Shipping</relationshipName>
    <type>Lookup</type>
</CustomField>