force-app/main/default/objects/Order_Lines_to_Shipping__c/fields/Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line Item</label>
    <referenceTo>Order_Line_Item__c</referenceTo>
    <relationshipName>Order_Lines_to_Shipping</relationshipName>
    <type>Lookup</type>
</CustomField>