force-app/main/default/objects/Order_Lines_to_Shipping__c/fields/Return_Order__c.field-meta.xml
<CustomField>
    <fullName>Return_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Order</label>
    <referenceTo>ReturnOrder</referenceTo>
    <relationshipName>Order_Lines_Shipping</relationshipName>
    <type>Lookup</type>
</CustomField>