force-app/main/default/objects/Order_Lines_to_Shipping__c/fields/Return_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Return_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Order Line Item</label>
    <referenceTo>ReturnOrderLineItem</referenceTo>
    <relationshipName>Order_Lines_to_Shipping</relationshipName>
    <type>Lookup</type>
</CustomField>