force-app/main/default/objects/Order_Lines_to_Shipping__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>Shipment</referenceTo>
    <relationshipName>Line_Orders_to_Shipping</relationshipName>
    <type>Lookup</type>
</CustomField>