force-app/main/default/objects/Order_Lines_to_Shipping__c/fields/Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Date__c</fullName>
    <formula>Shipment__r.HRCSVC_Shipment_Date__c</formula>
    <label>Shipment Date</label>
    <type>Date</type>
</CustomField>