force-app/main/default/objects/Order_Lines_to_Shipping__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>TEXT(Shipment__r.Status )</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>