force-app/main/default/objects/Order_Lines_to_Shipping__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <formula>Shipment__r.TrackingNumber  &amp; &quot; / &quot; &amp;  Shipment__r.TrackingUrl</formula>
    <label>Tracking Number &amp; URL</label>
    <type>Text</type>
</CustomField>